Created Css file and linked it to the Html file

--- a/PROJECTS/To-do list using JS/index.html
+++ b/PROJECTS/To-do list using JS/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>To-Do List</title>
+    <link href="style.css" rel="stylesheet">
     
 </head>
 <body>
